[project]
name = "fastapi-worker"
version = "0.1.0"
description = "Python fastapi example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "fastapi",
    "markupsafe",
    "markupsafe",
    "jinja2",
	"pydantic<2.12.0",
	"libpass",
	"typing",
	"jwt"
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
